--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -1,4 +1,6 @@
 {
+  
+  "type": "module",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "mongodb": "^6.20.0",
     "next": "14.2.8",
     "react": "^18",
